--- a/lgbt_wc/wordcloud.html
+++ b/lgbt_wc/wordcloud.html
@@ -10,10 +10,18 @@
     <div id='wordcloud'></div>
     <p>Palavras mais comumente usadas na descri&ccedil&atildeo dos conte&uacutedos de representatividade no LGBTQ Video Game Archive </p>
     <script>
+      function shuffle(a) {
+	for (let i = a.length; i; i--) {
+		let j = Math.floor(Math.random() * i);
+		[a[i - 1], a[j]] = [a[j], a[i - 1]];
+	}
+      }
+      var colors = ["#0000ff", "#400080", "#800080", "#800040", "#ff00ff"];
+      shuffle(colors);
       d3.wordcloud()
 	.font("arial black")
         .size([600, 400])
-        .fill(d3.scale.ordinal().range(["#0000ff", "#400080", "#800080", "#800040", "#ff00ff"]))
+        .fill(d3.scale.ordinal().range(colors))
         .words(words)
         .onwordclick(function(d, i) {
           if (d.href) { window.location = d.href; }
